BL1: Split platform_bl1 into bl1_1 and bl1_2
In order to better separate which platform files are used for each.
Tweak code-sharing to avoid unnecessary data being left in bl1_1. Remove
BL1 accelerator HAL, to avoid problems with cyclic cmake dependencies.

Change-Id: I5de967b5aaef99d601d227f0bdb4f2d1261a3e3d
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/bl1/Kconfig
+++ b/bl1/Kconfig
@@ -96,4 +96,8 @@ config TFM_BL1_LOGGING
     bool "Enable BL1 Logging"
     default y
 
+config BL1_2_BUILD_TYPE
+    string "BL1_2 build type"
+    default "$(CMAKE_BUILD_TYPE)"
+
 endif
