SPM: Change ns_agent flag bit definitions
Rather than using one bit to indicate "NS agent" and a second to
distinguish between ns_agent_tz and ns_agent_mailbox, just dedicate
a bit to each NS agent.

Signed-off-by: Chris Brand <chris.brand@cypress.com>
Change-Id: Ie19a9c79ca26e80c8c7c89d74958f69f01b2afd2

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2021-2022, Arm Limited. All rights reserved.
- * Copyright (c) 2021-2022 Cypress Semiconductor Corporation (an Infineon
+ * Copyright (c) 2021-2023 Cypress Semiconductor Corporation (an Infineon
  * company) or an affiliate of Cypress Semiconductor Corporation. All rights
  * reserved.
  *
@@ -116,7 +116,7 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
                                     | PARTITION_MODEL_PSA_ROT
 {% endif %}
 {% if manifest.ns_agent is sameas true %}
-                                    | PARTITION_NS_AGENT
+                                    | PARTITION_NS_AGENT_MB
 {% endif %}
                                     | PARTITION_PRI_{{manifest.priority}},
         .entry                      = ENTRY_TO_POSITION({{manifest.entry}}),
