Kconfig: Fix MCUBOOT_IMAGE_VERSION_S setting
TFM_VERSION is a runtime CMake variable whose value is calculated in
version.cmake.
MCUBOOT_IMAGE_VERSION_S shall be parsed as a string "${TFM_VERSION}"
rather than the value of TFM_VERSION, to align with CMake definitions.

When later builds are split, TFM_VERSION is calculated during TF-M
project build while Kconfig is executed prior to TF-M project build.
MCUBOOT_IMAGE_VERSION_S will become an invalid value if it is
interpreted as TFM_VERSION current value (empty) instead of a string.

Change-Id: I709a48628d3226d694056d02ff225f19900f5759
Signed-off-by: David Hu <david.hu@arm.com>

--- a/bl2/ext/mcuboot/Kconfig
+++ b/bl2/ext/mcuboot/Kconfig
@@ -185,7 +185,7 @@ config MCUBOOT_KEY_NS
 
 config MCUBOOT_IMAGE_VERSION_S
     string "Version number of S image"
-    default "$(TFM_VERSION)"
+    default "${TFM_VERSION}"
 
 config MCUBOOT_IMAGE_VERSION_NS
     string "Version number of NS image"
