--- a/secure_fw/partitions/protected_storage/Kconfig
+++ b/secure_fw/partitions/protected_storage/Kconfig
@@ -10,6 +10,8 @@ menuconfig TFM_PARTITION_PROTECTED_STORAGE
     depends on TFM_PARTITION_INTERNAL_TRUSTED_STORAGE && TFM_PARTITION_PLATFORM && TFM_PARTITION_CRYPTO
     default n
 
+if TFM_PARTITION_PROTECTED_STORAGE
+
 config PS_ENCRYPTION
     bool "PS encryption"
     default y
@@ -26,3 +28,5 @@ config PS_CRYPTO_AEAD_ALG
       Note: For GCM/CCM it is essential that IV doesn't get repeated. If this
       flag is set to PSA_ALG_GCM or PSA_ALG_CCM, PS_ROLLBACK_PROTECTION must be
       enabled to protect against IV rollback.
+
+endif
