Kconfig: Override log level choice instead
To override log levels in different build types, the "choice" of log
levels should be overridden instead.

The current approad does not affect the functionalities as the
xxx_LOG_LEVEL have the correct value.
But the values of choice options are not correct in the final config
file.

Change-Id: I31d55d8b88a44a65a5338550440860d0606b9823
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/Kconfig
+++ b/secure_fw/partitions/Kconfig
@@ -14,7 +14,7 @@ rsource "crypto/Kconfig"
 rsource "platform/Kconfig"
 rsource "internal_trusted_storage/Kconfig"
 
-choice
+choice PARTITION_LOG_LEVEL
     prompt "Secure Partition Log Level"
     default PARTITION_LOG_LEVEL_SILENCE
 
