SPM: Fix build error on tfm_sprt library
Functions in 'tfm_spm' is called by 'tfm_sprt' which is a
static library. So include the 'tfm_spm' library explicitly
into the 'tfm_sprt' library.

Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I53badb56442a1f283e76c44620040764d7259cf1

--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -38,6 +38,8 @@ target_link_libraries(tfm_sprt
         tfm_spm_defs
         tfm_partition_defs
         platform_s
+    PRIVATE
+        tfm_spm
 )
 
 target_compile_definitions(tfm_partition_defs
