Build: Add stub functions of system calls
GNU Arm compiler version greater equal than *11.3.Rel1*
has a linker issue that required system calls are missing,
such as _read and _write. Add stub functions of required
system calls to solve this issue.

[from https://review.trustedfirmware.org/c/TF-M/trusted-firmware-m/+/20612]

Signed-off-by: Chendi Sun <chendi.sun@arm.com>
Change-Id: I1384a405174097639e4c7bb71f19d01a66318a2d

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(bl2
     $<$<BOOL:${DEFAULT_MCUBOOT_FLASH_MAP}>:src/default_flash_map.c>
     $<$<BOOL:${MCUBOOT_DATA_SHARING}>:src/shared_data.c>
     $<$<BOOL:${PLATFORM_DEFAULT_PROVISIONING}>:src/provisioning.c>
+    $<$<BOOL:${CONFIG_GNU_SYSCALL_STUB_ENABLED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/syscalls_stub.c>
 )
 
 add_subdirectory(ext/mcuboot)
