--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -18,6 +18,8 @@ target_include_directories(tfm_sprt
 )
 
 target_sources(tfm_sprt
+    PUBLIC
+        $<$<BOOL:${CONFIG_GNU_SYSCALL_STUB_ENABLED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/syscalls_stub.c>
     PRIVATE
         ./crt_memcmp.c
         ./crt_memmove.c
