ITS: Minor fix in build system
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: I3a532294a2e95d46058ea4f592dfff44afd65ec6

--- a/secure_fw/partitions/internal_trusted_storage/CMakeLists.txt
+++ b/secure_fw/partitions/internal_trusted_storage/CMakeLists.txt
@@ -20,7 +20,7 @@ target_include_directories(tfm_psa_rot_partition_its
         ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/internal_trusted_storage
     PUBLIC
         # Required for ps_object_defs.h
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/../protected_storage
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../protected_storage>
 )
 target_include_directories(tfm_partitions
     INTERFACE
