Platform: Update crypto_keys compile definitions
Add MBEDTLS_PSA_CRYPTO_KEY_ID_ENCODES_OWNER to the platform_crypto_keys
target defines, as that file is part of the crypto service (effectively
the platform HAL of the crypto service) and therefore needs to call the
underlying crypto implementation instead of the crypto service itself.

Change-Id: I5944532de9bc83a1148463cae13e6247d842c2c6
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -162,6 +162,7 @@ if(TFM_PARTITION_CRYPTO)
 
     target_compile_definitions(platform_crypto_keys
         PRIVATE
+            MBEDTLS_PSA_CRYPTO_KEY_ID_ENCODES_OWNER
             $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:SYMMETRIC_INITIAL_ATTESTATION>
             $<$<BOOL:${PLATFORM_DEFAULT_OTP}>:PLATFORM_DEFAULT_OTP>
             $<$<BOOL:${TEST_S_ATTESTATION}>:TEST_S_ATTESTATION>
