BL1: Allow configuring shared symbols list
Change-Id: I039667691304f9e862660e2c3c164134713e9505
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/bl1/bl1_1/CMakeLists.txt
+++ b/bl1/bl1_1/CMakeLists.txt
@@ -44,7 +44,7 @@ target_compile_definitions(bl1_1
         $<$<BOOL:${TEST_BL1_1}>:TEST_BL1_1>
 )
 
-target_share_symbols(bl1_1 ${CMAKE_CURRENT_SOURCE_DIR}/bl1_1_shared_symbols.txt)
+target_share_symbols(bl1_1 ${BL1_SHARED_SYMBOLS_PATH})
 
 ################################################################################
 
