--- a/bl1/bl1_1/shared_lib/CMakeLists.txt
+++ b/bl1/bl1_1/shared_lib/CMakeLists.txt
@@ -12,6 +12,8 @@ target_include_directories(bl1_1_shared_lib_interface
     INTERFACE
         interface
         $<$<BOOL:${TFM_BL1_DEFAULT_OTP}>:${CMAKE_CURRENT_SOURCE_DIR}/otp>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/include>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${CMAKE_CURRENT_SOURCE_DIR}/pq_crypto>
 )
 
 target_link_libraries(bl1_1_shared_lib_interface
@@ -26,6 +28,11 @@ target_sources(bl1_1_shared_lib
         $<$<BOOL:${TFM_BL1_DUMMY_TRNG}>:trng/trng_dummy.c>
         ./util.c
         $<$<BOOL:${TFM_BL1_DEFAULT_OTP}>:./otp/otp_default.c>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:./pq_crypto/pq_crypto_psa.c>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/lms.c>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/lmots.c>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/platform_util.c>
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:${MBEDCRYPTO_PATH}/library/psa_util.c>
 )
 
 target_link_libraries(bl1_1_shared_lib
@@ -47,6 +54,7 @@ target_compile_definitions(bl1_1_shared_lib_interface
     INTERFACE
         $<$<BOOL:${TEST_BL1_1}>:TEST_BL1_1>
         MCUBOOT_FIH_PROFILE_HIGH
+        $<$<BOOL:${TFM_BL1_PQ_CRYPTO}>:MBEDTLS_CONFIG_FILE="mbedtls-pq-cfg.h">
 )
 
 if(TFM_BL1_SOFTWARE_CRYPTO)
