--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -10,7 +10,9 @@ cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0076 NEW)
 cmake_policy(SET CMP0079 NEW)
 
-add_subdirectory(ns)
+if (NS)
+    add_subdirectory(ns)
+endif()
 
 add_library(platform_s STATIC)
 add_library(platform_region_defs INTERFACE)
