CC3XX: Update ROM driver
Add more AES and hash modes, improve DMA handling of large values.
Prepare code for restartable operation. Simplify TRNG api. Add DPA and
DFA countermeasures. Add hardware compatibility checking.

Change-Id: I48f605cdac5f022943c3556f3ae4d5cb71e175e9
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/ext/accelerator/cc312/cc312-rom/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/cc312-rom/CMakeLists.txt
@@ -17,6 +17,7 @@ target_sources(cc312_rom
         ./cc3xx_dma.c
         ./cc3xx_init.c
         ./cc3xx_engine_state.c
+        ./cc3xx_stdlib.c
 )
 
 target_include_directories(cc312_rom
