Build: GCC: Add NOLOAD attribute for BSS sections
The output sections of name with "BSS" are expected to put only
(*.bss*) and (COMMON) input sections so that the type will be SHT_NOBITS
and the sections do not occupy space in the output file because there is
no need to put zeros in output files.

Whilst there are two exceptions, they are the
*(TFM_*_APP-ROT_ATTR_ZI) and *(TFM_*_PSA-ROT_ATTR_ZI) input sections.
These might be done by mistake and make the corresponding output
sections become PROGBITS type which takes space.

Note there are no usages of these sections thus the issue does not
emerge.

This patch fixes this issue by adding "NOLOAD" for BSS sections.
This explicitly make the output sections "NOBITS".

Change-Id: I1ecb25763436989f407498d3b3e3e718c51710c5
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -318,7 +318,7 @@ SECTIONS
     {
         *libtfm_spm*:*(.data*);
     } > RAM AT> FLASH
-    .spm_bss :
+    .spm_bss (NOLOAD):
     {
         *libtfm_spm*:*(.bss*);
     } > RAM AT> RAM
@@ -349,7 +349,7 @@ SECTIONS
     Image$$ER_{{partition.manifest.name}}_RWZI$$RW$$Base = ADDR(.ER_{{partition.manifest.name}}_RWZI);
     Image$$ER_{{partition.manifest.name}}_RWZI$$RW$$Limit = ADDR(.ER_{{partition.manifest.name}}_RWZI) + SIZEOF(.ER_{{partition.manifest.name}}_RWZI);
 
-    .{{partition.manifest.name}}_RWZI_BSS : ALIGN(4)
+    .{{partition.manifest.name}}_RWZI_BSS (NOLOAD): ALIGN(4)
     {
         start_of_{{partition.manifest.name}}_RWZI = .;
     {% if partition.attr.linker_pattern.library_list %}
@@ -408,7 +408,7 @@ SECTIONS
     Image$$.ER_{{partition.manifest.name}}_RWZI$$RW$$Base = ADDR(.ER_{{partition.manifest.name}}_RWZI);
     Image$$.ER_{{partition.manifest.name}}_RWZI$$RW$$Limit = ADDR(.ER_{{partition.manifest.name}}_RWZI) + SIZEOF(.ER_{{partition.manifest.name}}_RWZI);
 
-    .{{partition.manifest.name}}_RWZI_BSS : ALIGN(4)
+    .{{partition.manifest.name}}_RWZI_BSS (NOLOAD): ALIGN(4)
     {
         start_of_{{partition.manifest.name}}_RWZI = .;
     {% if partition.attr.linker_pattern.library_list %}
@@ -494,7 +494,7 @@ SECTIONS
     Image$$TFM_SP_META_PTR$$ZI$$Limit = ADDR(.TFM_SP_META_PTR) + SIZEOF(.TFM_SP_META_PTR);
 #endif
 
-    .TFM_BSS : ALIGN(4)
+    .TFM_BSS (NOLOAD): ALIGN(4)
     {
         __bss_start__ = .;
 
