CC3XX: Add CHACHA20 cipher to ROM driver
Change-Id: I72bc21a25d70ff155e7a8f1b4966c01a22e77b55
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/ext/accelerator/cc312/cc312-rom/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/cc312-rom/CMakeLists.txt
@@ -18,6 +18,7 @@ target_sources(cc312_rom
         ./cc3xx_init.c
         ./cc3xx_engine_state.c
         ./cc3xx_stdlib.c
+        ./cc3xx_chacha.c
 )
 
 target_include_directories(cc312_rom
