Platform: Fix alignment of the end of TFM_UNPRIV_CODE section
End of the TFM_UNPRIV_CODE section needs te be aligned the same
way as other sections are. This is needed to be able to protect it using
protection hardware.

For more details see
https://lists.trustedfirmware.org/archives/list/tf-m@lists.trustedfirmware.org/thread/KG6QAWTDSTF7Y3QBJ4HBXG7Z7NR74ZUN/

Change-Id: Ie43f35382f7e37561c10cd24e48c5e273d5e2be8
Signed-off-by: Bohdan Hunko <Bohdan.Hunko@infineon.com>

--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -250,8 +250,8 @@ SECTIONS
 
         . = ALIGN(TFM_LINKER_UNPRIV_CODE_ALIGNMENT);
     } > FLASH
-    Image$$TFM_UNPRIV_CODE$$RO$$Base = ADDR(.ER_UNPRIV_CODE);
-    Image$$TFM_UNPRIV_CODE$$RO$$Limit = ADDR(.ER_UNPRIV_CODE) + SIZEOF(.ER_UNPRIV_CODE);
+    Image$$TFM_UNPRIV_CODE_START$$RO$$Base = ADDR(.ER_UNPRIV_CODE);
+    Image$$TFM_UNPRIV_CODE_END$$RO$$Limit = ADDR(.ER_UNPRIV_CODE) + SIZEOF(.ER_UNPRIV_CODE);
 
     /* Position tag */
     . = ALIGN(TFM_LINKER_PT_RO_ALIGNMENT);
