--- a/platform/ext/common/iar/tfm_isolation_l3.icf.template
+++ b/platform/ext/common/iar/tfm_isolation_l3.icf.template
@@ -113,11 +113,16 @@ define block ER_{{partition.manifest.name}}_RO  with alignment = {{ 'TFM_LINKER_
 /**** blocks CODE + RO-data definition ends here*/
 
 /**** Block Unprivileged Secure code + RO-data definition starts here */
-define block TFM_UNPRIV_CODE with alignment = TFM_LINKER_UNPRIV_CODE_ALIGNMENT {
+define block TFM_UNPRIV_CODE_START with alignment = TFM_LINKER_UNPRIV_CODE_ALIGNMENT {
     section SFN,
     readonly
 };
 
+    /*
+     * This empty, zero long execution region is here to mark the end address
+     * of TFM unprivileged code.
+     */
+define block TFM_UNPRIV_CODE_END with alignment = TFM_LINKER_UNPRIV_CODE_ALIGNMENT, size = 0 { };
 
 /* position tag block : base address of secure data area ( S_DATA_START)*/
 define block PT_SECURE_DATA_START with alignment = TFM_LINKER_SECURE_DATA_ALIGNMENT, size = 0 { };
@@ -241,7 +246,8 @@ define block LR_CODE with fixed order {
     block ER_{{partition.manifest.name}}_RO,
     {% endif %}
 {% endfor %}
-    block TFM_UNPRIV_CODE,
+    block TFM_UNPRIV_CODE_START,
+    block TFM_UNPRIV_CODE_END,
     block PT_RO_END,
 };
 
