CC3XX: Add CMAC KDF
Change-Id: Ic212fc119cde41ad7cfcc0ae125fdf56ea0c623d
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/ext/accelerator/cc312/cc312-rom/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/cc312-rom/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(cc312_rom
         ./cc3xx_engine_state.c
         ./cc3xx_stdlib.c
         ./cc3xx_chacha.c
+        ./cc3xx_kdf.c
 )
 
 target_include_directories(cc312_rom
