Build: Add a message when MM-IOVEC is enabled
As MM-IOVEC has trade-off between security and memory/runtime
performances, users should be noted when it is enabled.

Change-Id: Ib32bde6271d8ab177796a62768bdd6e46d9c0a7c
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -10,6 +10,12 @@
 
 cmake_minimum_required(VERSION 3.15)
 
+if(PSA_FRAMEWORK_HAS_MM_IOVEC)
+    message(NOTICE "**** MM-IOVEC is enabled for memory and runtime optimizations for larger buffers, ****\n"
+                   "**** but reduces mitigation for common security vulnerabilities. ****\n"
+                   "**** Check FF-M 1.1 https://developer.arm.com/documentation/aes0039/latest for more details. ****")
+endif()
+
 add_library(tfm_spm STATIC)
 add_library(tfm_spm_defs INTERFACE)
 add_library(tfm_boot_status INTERFACE)
