Attest: Remove redundant definitions of PSA_INITIAL_ATTEST_MAX_TOKEN_SIZE
Create a initial_attestation.h template to set use case specific
PSA_INITIAL_ATTEST_MAX_TOKEN_SIZE value in build runtime.
Call CMake configure_file() to set PSA_INITIAL_ATTEST_MAX_TOKEN_SIZE
macro in initial_attestation.h, according to TF-M CMake config value.
Enforce builds to include generated initial_attestation.h, instead of
region_defs.h.
Remove platform specific definitions from platform region_defs.h.

Signed-off-by: David Hu <david.hu@arm.com>
Change-Id: Ibf7e09c8d1196401a44aeadf0c46802168d89b33

--- a/interface/include/psa/initial_attestation.h.in
+++ b/interface/include/psa/initial_attestation.h.in
@@ -39,7 +39,7 @@ extern "C" {
  * attestation service. Used to configure buffers for services that verify the
  * produced tokens.
  */
-#define PSA_INITIAL_ATTEST_MAX_TOKEN_SIZE (0x800)
+#cmakedefine PSA_INITIAL_ATTEST_MAX_TOKEN_SIZE @PSA_INITIAL_ATTEST_MAX_TOKEN_SIZE@
 
 /**
  * The list of fixed claims in the initial attestation token is still evolving,
