--- a/secure_fw/partitions/initial_attestation/CMakeLists.txt
+++ b/secure_fw/partitions/initial_attestation/CMakeLists.txt
@@ -12,6 +12,9 @@ endif()
 cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0079 NEW)
 
+configure_file(${CMAKE_SOURCE_DIR}/interface/include/psa/initial_attestation.h.in
+               ${CMAKE_BINARY_DIR}/generated/interface/include/psa/initial_attestation.h)
+
 add_library(tfm_psa_rot_partition_attestation STATIC)
 
 target_sources(tfm_psa_rot_partition_attestation PRIVATE
@@ -71,6 +74,7 @@ add_library(tfm_attestation_defs INTERFACE)
 target_include_directories(tfm_attestation_defs
     INTERFACE
         .
+        ${CMAKE_BINARY_DIR}/generated/interface/include/
 )
 
 target_link_libraries(tfm_attestation_defs
