Build: Merge tfm_partition_defs into tfm_config
The purpose of tfm_partition_defs is to expose the partition related
compile definitions, which can easily be covered by tfm_config.
So merge tfm_partition_defs into tfm_config to reduce the number of
CMake targets.

Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: I8ac9983ece670383183459554c9a22e1e8e22d66

--- a/secure_fw/partitions/initial_attestation/CMakeLists.txt
+++ b/secure_fw/partitions/initial_attestation/CMakeLists.txt
@@ -90,7 +90,7 @@ target_link_libraries(tfm_partitions
 )
 
 
-target_compile_definitions(tfm_partition_defs
+target_compile_definitions(tfm_config
     INTERFACE
-    TFM_PARTITION_INITIAL_ATTESTATION
+        TFM_PARTITION_INITIAL_ATTESTATION
 )
