--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -76,7 +76,7 @@ target_link_libraries(tfm_partitions
         tfm_psa_rot_partition_crypto
 )
 
-target_compile_definitions(tfm_partition_defs
+target_compile_definitions(tfm_config
     INTERFACE
         TFM_PARTITION_CRYPTO
 )
