--- a/secure_fw/partitions/firmware_update/CMakeLists.txt
+++ b/secure_fw/partitions/firmware_update/CMakeLists.txt
@@ -79,7 +79,7 @@ target_link_libraries(tfm_partitions
         tfm_psa_rot_partition_fwu
 )
 
-target_compile_definitions(tfm_partition_defs
+target_compile_definitions(tfm_config
     INTERFACE
     TFM_PARTITION_FIRMWARE_UPDATE
 )
