--- a/secure_fw/partitions/internal_trusted_storage/CMakeLists.txt
+++ b/secure_fw/partitions/internal_trusted_storage/CMakeLists.txt
@@ -79,7 +79,7 @@ target_link_libraries(tfm_partitions
         tfm_psa_rot_partition_its
 )
 
-target_compile_definitions(tfm_partition_defs
+target_compile_definitions(tfm_config
     INTERFACE
         TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
 )
