--- a/secure_fw/partitions/platform/CMakeLists.txt
+++ b/secure_fw/partitions/platform/CMakeLists.txt
@@ -51,7 +51,7 @@ target_link_libraries(tfm_partitions
         tfm_psa_rot_partition_platform
 )
 
-target_compile_definitions(tfm_partition_defs
+target_compile_definitions(tfm_config
     INTERFACE
         TFM_PARTITION_PLATFORM
 )
